k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
  namespace: dazee-banking-app
spec:
  selector:
    matchLabels:
      app: budget-app
  replicas: 1
  template:
    metadata:
      labels:
        app: budget-app
    spec:
      containers:
        - name: budget-app
          image: abammeke/budget-app:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-hub-credentials
