k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-app-service
  namespace: dazee-banking-app
spec:
  type: NodePort
  selector:
    app: budget-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30009
